--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -296,7 +296,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.5" data-path="range-question.html">
+        <li class="chapter " data-level="1.4.4.5" data-path="order-question.html">
+            
+                <a href="order-question.html">
+            
+                    
+                    Order Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4.6" data-path="range-question.html">
             
                 <a href="range-question.html">
             
@@ -309,7 +322,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.6" data-path="select-question.html">
+        <li class="chapter " data-level="1.4.4.7" data-path="select-question.html">
             
                 <a href="select-question.html">
             
@@ -1707,7 +1720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.13.1","depth":3,"next":{"title":"Checkbox Input","level":"1.4.13.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"previous":{"title":"Input","level":"1.4.13","depth":2,"path":"chapters/input.md","ref":"chapters/input.md","articles":[{"title":"Dashboard","level":"1.4.13.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},{"title":"Checkbox Input","level":"1.4.13.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},{"title":"Number Input","level":"1.4.13.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},{"title":"Proportions Input","level":"1.4.13.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},{"title":"Select Input","level":"1.4.13.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},{"title":"Slider Input","level":"1.4.13.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},{"title":"Text Area","level":"1.4.13.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},{"title":"Text Input","level":"1.4.13.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},{"title":"Voice Input","level":"1.4.13.9","depth":3,"path":"components/input/voice.md","ref":"components/input/voice.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2018-08-24T03:15:54.507Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-24T03:17:01.224Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.13.1","depth":3,"next":{"title":"Checkbox Input","level":"1.4.13.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"previous":{"title":"Input","level":"1.4.13","depth":2,"path":"chapters/input.md","ref":"chapters/input.md","articles":[{"title":"Dashboard","level":"1.4.13.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},{"title":"Checkbox Input","level":"1.4.13.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},{"title":"Number Input","level":"1.4.13.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},{"title":"Proportions Input","level":"1.4.13.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},{"title":"Select Input","level":"1.4.13.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},{"title":"Slider Input","level":"1.4.13.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},{"title":"Text Area","level":"1.4.13.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},{"title":"Text Input","level":"1.4.13.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},{"title":"Voice Input","level":"1.4.13.9","depth":3,"path":"components/input/voice.md","ref":"components/input/voice.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2018-08-29T13:54:18.521Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-29T13:55:51.727Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
