--- a/components/draggable-grid.html
+++ b/components/draggable-grid.html
@@ -296,7 +296,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.5" data-path="range-question.html">
+        <li class="chapter " data-level="1.4.4.5" data-path="order-question.html">
+            
+                <a href="order-question.html">
+            
+                    
+                    Order Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4.6" data-path="range-question.html">
             
                 <a href="range-question.html">
             
@@ -309,7 +322,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.6" data-path="select-question.html">
+        <li class="chapter " data-level="1.4.4.7" data-path="select-question.html">
             
                 <a href="select-question.html">
             
@@ -1688,7 +1701,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Draggable Grid","level":"1.4.14.1","depth":3,"next":{"title":"Draggable List","level":"1.4.14.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Display","level":"1.4.14","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.14.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.14.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.14.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.14.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.14.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.14.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.14.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/draggable-grid.md","mtime":"2018-08-24T03:15:54.511Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-24T03:17:01.224Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Draggable Grid","level":"1.4.14.1","depth":3,"next":{"title":"Draggable List","level":"1.4.14.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Display","level":"1.4.14","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.14.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.14.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.14.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.14.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.14.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.14.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.14.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/draggable-grid.md","mtime":"2018-08-29T13:54:18.521Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-29T13:55:51.727Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
