--- a/components/learn/confidence-coverage-normal.html
+++ b/components/learn/confidence-coverage-normal.html
@@ -296,7 +296,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.5" data-path="../range-question.html">
+        <li class="chapter " data-level="1.4.4.5" data-path="../order-question.html">
+            
+                <a href="../order-question.html">
+            
+                    
+                    Order Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4.6" data-path="../range-question.html">
             
                 <a href="../range-question.html">
             
@@ -309,7 +322,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4.6" data-path="../select-question.html">
+        <li class="chapter " data-level="1.4.4.7" data-path="../select-question.html">
             
                 <a href="../select-question.html">
             
@@ -1689,7 +1702,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Normal","level":"1.5.3.2","depth":3,"next":{"title":"Cross-Validation","level":"1.5.4","depth":2,"path":"components/learn/cross-validation.md","ref":"components/learn/cross-validation.md","articles":[]},"previous":{"title":"Binomial","level":"1.5.3.1","depth":3,"path":"components/learn/confidence-coverage-binomial.md","ref":"components/learn/confidence-coverage-binomial.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/learn/confidence-coverage-normal.md","mtime":"2018-08-24T03:15:54.527Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-24T03:17:01.224Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Normal","level":"1.5.3.2","depth":3,"next":{"title":"Cross-Validation","level":"1.5.4","depth":2,"path":"components/learn/cross-validation.md","ref":"components/learn/cross-validation.md","articles":[]},"previous":{"title":"Binomial","level":"1.5.3.1","depth":3,"path":"components/learn/confidence-coverage-binomial.md","ref":"components/learn/confidence-coverage-binomial.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/learn/confidence-coverage-normal.md","mtime":"2018-08-29T13:54:18.537Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-08-29T13:55:51.727Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
